--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="#">Séries</a></li>
                 <li><a href="#">Infantis</a></li>
                 <img src="img/search.png" alt="pesquisa" class="search">
-                <img src="img/perfil.png" alt="perfil" class="perfil"><!--Baixar um perfil em png-->
+                <img src="img/perfil.png" alt="perfil" class="perfil">
             </ul>
         </nav>
     </header>
@@ -42,7 +42,7 @@
     </main>
     <footer>
         <section class="cards">
-            <div class="card"><img src="img/capita.jpg" alt="imagens"></div> <!--Duplicar linhas Alt + Shirft + ↓-->
+            <div class="card"><img src="img/capita.jpg" alt="imagens"></div> 
             <div class="card"><img src="img/estrela.jpg" alt="imagens"></div>
             <div class="card"><img src="img/trem.jpg" alt="imagens"></div>
             <div class="card"><img src="img/os7.jpg" alt="imagens"></div>
