--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="#">Séries</a></li>
                 <li><a href="#">Infantis</a></li>
                 <img src="img/search.png" alt="pesquisa" class="search">
-                <img src="img/perfil.png" alt="perfil" class="perfil">
+                <img src="img/perfil" alt="perfil" class="perfil">
             </ul>
         </nav>
     </header>
